# first-OpenGL-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt
engine/include/glad/: glad.h
engine/interface/: defines.h  engine.h  fileio.h
engine/interface/headers/: engine.h
engine/interface/src/: engine_loader.c  hotreloading.h  loaddll.c
engine/src/: fileio.c  main.c
engine_loader/: CMakeLists.txt
engine_loader/interface/: engine.h  loader.h
engine_loader/src/: engine_loader.c  hotreloading.h
game/: CMakeLists.txt
game/src/: main.c
